[tool.poetry]
name = "omniunibot"
version = "0.3.0"
description = "A universal multiplatform message bot"
authors = ["yttty <yttty@noreply.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yttty/omniunibot"
repository = "https://github.com/yttty/omniunibot"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.12"
loguru = ">=0.6, <0.8"
pyzmq = "^25.1"
slack-sdk = "^3.21"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.23.5.post1"
pytest-pep8 = "^1.0.6"
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
