[tool.poetry]
name = "omniunibot"
version = "0.4.0"
description = "A universal multiplatform message bot"
authors = ["yttty <yttty@noreply.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yttty/omniunibot"
repository = "https://github.com/yttty/omniunibot"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.12"
loguru = ">=0.6, <0.8"
slack-sdk = ">=3.21"
aiohttp = "^3.9"
pyzmq = "^26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-pep8 = "^1.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
